# ZenitelRegexQT_EdiGregov

./: CMakeLists.txt  main.cpp  parser.cpp  parser.h  threading.cpp  threading.h
